Vue 3: fix unwanted scrollbars on narrow viewports

--- a/src/styles/cylc/_workflow.scss
+++ b/src/styles/cylc/_workflow.scss
@@ -21,7 +21,6 @@
 .workflow-panel {
   .main {
     display: flex;
-    min-height: calc(100vh - 48px);
     .content {
       min-width: 300px;
       min-height: 300px;
